# server/api/Services/IBookService.cs
@@ -1,11 +1,12 @@
 using api.Dto;
+using api.Dto.Requests;
 
 namespace api.Services;
 
 public interface IBookService
 {
     Task<List<BookDto>> All();
-    Task<BookDto> Create(BookDto book);
+    Task<BookDto> Create(CreateBookRequest book);
     Task<BookDto> Get(string id);
     Task<BookDto> Update(BookDto book);
     Task<bool> Delete(string id);
